# python_advanced

./: README.md  pyproject.toml  requirements.txt  setup.cfg
hw_1/: ast_visualizer.py
src/hw_1/: top_fibonacci_numbers.py
src/hw_1/artifacts/: ast.html
src/hw_2/: image_to_tex.py  matrix_to_tex.py
src/hw_2/artifacts/: matrix.tex
src/hw_3/: matrix.py  matrix_mixins.py  matrix_with_ops.py
src/hw_3/artifacts/easy/: matrix*.txt  matrix+.txt  matrix@.txt
src/hw_4/: fibonacci_performance.py  integrate_performance.py
src/hw_4/artifacts/: eazy_performance.txt  medium_performance.txt
src/hw_5/: images_downloader.py
