[metadata]
name = python-advanced-hw-1
version = 0.0.2
author = Aleksandr Fedotov
author_email = fake@gmail.com
description = A homework test package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/iisuslik43/python_advanced
;classifiers =
;    Programming Language :: Python :: 3
;    License :: OSI Approved :: MIT License
;    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
